Fixed Spacing in the Donation Plan Box

--- a/style.css
+++ b/style.css
@@ -185,6 +185,11 @@ footer {
 .donate-plan-box p {
     font-size: 16px;
     color: #707070;
+    margin-top: 0px;
+}
+
+.donate-plan-box h4 {
+    margin-bottom: 12px;
 }
 
 #food-for-family-bg {
